# Year2

Assembler/HW1/: summary.txt
Assembler/lab_parallel/: README.md  Vector.c  input1.txt  input4.txt  input5.txt  input6.txt
Assembler/miniproject1/: README.md  sinh.asm
Assembler/miniproject2/: README.md  a.out  main.cpp
Assembler/task02/: hw2.0.ASM  Отчет.md
Assembler/task4/: README.md  Vector.cpp  input0.txt  input2.txt  input3.txt  input6.txt
ielts/: описание_графика.docx  эссе1.docx  эссе2.docx
алгосы/++Graham/: ++Graham.sln
алгосы/HW2/: HW2.sln
алгосы/Rtree/: CMakeLists.txt  main.cpp
алгосы/Rtree/input/: test10.txt  test9.txt
алгосы/Rtree/output/: answer10.txt  temp9.txt
алгосы/SortsChampionship/: AbstractSort.cpp  AbstractSort.h  BinInsertionSort on rand 0 to 4000 of size 4100output.txt  BinInsertionSort.cpp  BinInsertionSort.xlsx  BubbleSort on almost sorted 1 to 4100 of size 4100output.txt  BubbleSort.cpp  BubbleSort.xlsx  CMakeLists.txt  CountSort on rand 0 to 5 of size 4100output.txt  CountSort.cpp  CountSort.xlsx  HeapSort.cpp  HeapSort.xlsx  MergeSort.cpp  MergeSort.xlsx  QuickSort.cpp  QuickSort.xlsx  RadixSort.cpp  RadixSort.xlsx  SelectionSort.cpp  SelectionSort.xlsx  a.out  almost sorted 1 to 4100.xlsx  checkSorted.cpp  input.txt  main.cpp  output.txt  rand 0 to 4000.xlsx  rand 0 to 5.xlsx  results.csv  reverse sorted 1 to 4100.xlsx  отчет.docx
майнор/: Музей_Луизиана.docx
практика/: График.docx  Зубарева Наталия Отчет По Практике.docx  Индивидуальное задание.docx  Отзыв_руководителя_учебной_практики_2_курс_ПИ_2021.docx
(+205 files in other folders)
